Finished inital copywriting - now I get to write code

--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
 				<hr>
 
 				<div class="col-lg-6">
-					<p>Algonquin Studios believes strongly in giving time and other resources to the Western New York community, especially the City of Buffalo and some of its underserved neighborhoods. Our first major program was Algonquin Sports for Kids: Buffalo Soccer Club, utilizing sports as a platform to encourage youth and family development in a safe environment through healthy choices, the development of athletic identity, and positive behavior changes, specifically an increase in self-discipline, personal responsibility, and respect for self and others.</p>
+					<p>Buffalo Open GIS is a system developed to help individuals and community organizations map their data to enable  positive impacts on the city of Buffalo. When we looked at the data sets provided by organizations for the <a href="http://attwny.hackupstate.com/" target="_blank">WNY Civic App Challenge</a> we saw a common need for groups.  The NGOs had spreadsheets full of addresses and latitudes/longitudes, but they didn't have a good way to create, update, and share, that data with other citizens. Building this tool gave us a chance to stretch our abilities and try out some new development tools.</p>
 				</div><!-- col-lg-6 -->
 
 				<div class="col-lg-6">
-					<p>Lorem ipsum dolor sit amet, falli choro sea an, ius eu nibh constituto, sit paulo nostro volumus cu. Ea duo odio deleniti. Et justo repudiandae his. Vim an appetere principes, quo dicunt adolescens cu. Homero aperiri admodum his id, usu ad commodo consetetur. Duo etiam splendide no. Quis facilis vel ea, saperet appetere vulputate at quo. Ex pro dictas ocurreret, no aeque dissentiet mea. Quo nisl malis et. At summo tollit consulatu eam, nam at dicta assueverit, eius periculis ut nec.</p>
+					<p>Algonquin Studios believes strongly in giving time and other resources to the Western New York community, especially the City of Buffalo and some of its underserved neighborhoods. If you enjoy this application and plan to use it, please consider supporting another program we operate: <a href="http://algonquinstudios.com/Engage/Community-Initiatives/BuffaloSoccerClub" target="_blank">Algonquin Sports for Kids: Buffalo Soccer Club</a>. A youth soccer program based on the concepts of healthy choices, personal responsibility, and respect for self and others.</p>
 				</div><!-- col-lg-6 -->
 			</div><!-- row -->
 		</div><!-- container -->
@@ -354,7 +354,7 @@
 
 				<div class="col-lg-4">
 					<h3>Help Us</h3>
-					<p>Together we can make Buffalo an even better city.  Share this app with the people who need access to the information or a place to store their own.</p>
+					<p>Together we can make Buffalo an even better city.  Share this app with the people who need access to your maps  or a way to create their own.</p>
 				</div><!-- col -->
 
 			</div><!-- row -->
