More copy edits

--- a/index.html
+++ b/index.html
@@ -71,23 +71,22 @@
 		<!-- ==== GREYWRAP ==== -->
 		<div id="greywrap">
 			<div class="row">
-				<div class="col-lg-4 callout">
-					<span class="icon icon-stack"></span>
-					<h2>Use your data!</h2>
-					<p>Addresses in a spreadsheet are useless. Buffalo Open GIS helps you visualize your data and access it from your mobile device. Share your maps with your community, update them in the field, see the patterns on the map. All for free with our easy to use website.</p>
+        <div class="col-lg-4 callout">
+          <span class="icon icon-upload"></span>
+          <h2>Create a Map (<5 min)</h2>
+          <p>Create an account. Copy and paste data points from your excel spreadsheet into our tools.  We do the rest for you! Translating addresses into latitude/longitude pairs, generating the map, creating tool tips. All you have to do is share your data.</p>
         </div><!-- col-lg-4 -->
 
 				<div class="col-lg-4 callout">
-					<span class="icon icon-upload"></span>
-					<h2>Create a Map (<5 min)</h2>
-					<p>Create an account. Copy and paste data points from your excel spreadsheet into our tools.  We do the rest for you! Translating addresses into latitude/longitude pairs, generating the map, creating tool tips. All you have to do is share your data.</p>
-          </div><!-- col-lg-4 -->
+					<span class="icon icon-stack"></span>
+					<h2>Use your data!</h2>
+					<p>Addresses in a spreadsheet are useless. Buffalo Open GIS helps you visualize your data and access it from your mobile device. Share your maps with your community, update them in the field, see the patterns in your data. All for free with our easy to use website.</p>
+        </div><!-- col-lg-4 -->
 
 				<div class="col-lg-4 callout">
 					<span class="icon icon-heart"></span>
-					<h2>Send the link or Embed into your site</h2>
+					<h2>Share your map or Embed into your site</h2>
 					<p>Integrating your custom map in your website is as simple as copying and pasting.  Don't have a website? Just send the link - we'll host it for you.</p>
-                    <code><pre>&lt;embed&gt;Somestuffhere&lt;/embed&gt;</pre></code>
 				</div><!-- col-lg-4 -->
 			</div><!-- row -->
 		</div><!-- greywrap -->
@@ -112,9 +111,9 @@
 		<!-- ==== SECTION DIVIDER1 -->
 		<section class="section-divider textdivider divider1">
 			<div class="container">
-				<h1>PROFESSIONALLY DISPLAY YOUR OPEN GIS DATA</h1>
+				<h1>POPULAR MAPS</h1>
 				<hr>
-				<p>Lorem ipsum dolor sit amet, falli choro sea an, ius eu nibh constituto, sit paulo nostro volumus cu.</p>
+				<p>See what other folks in the community are mapping.</p>
 			</div><!-- container -->
 		</section><!-- section -->
 
