Added Creative Commons License

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
 				<div class="col-lg-4 callout">
 					<span class="icon icon-heart"></span>
-					<h2>Share your map or Embed into your site</h2>
+					<h2>Share your map or embed into your site</h2>
 					<p>Integrating your custom map in your website is as simple as copying and pasting.  Don't have a website? Just send the link - we'll host it for you.</p>
 				</div><!-- col-lg-4 -->
 			</div><!-- row -->
@@ -362,7 +362,9 @@
 
 		<div id="footerwrap">
 			<div class="container">
-				<h4>Footer</h4>
+        <div class="pull-left">
+				<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a> <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Buffalo Open GIS</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://www.algonquinstudios.com" property="cc:attributionName" rel="cc:attributionURL">Algonquin Studios</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
+        </div>
 			</div>
 		</div>
 
