--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
 
-    <script src="assets/js/jquery.min.js"></script>
-	<script type="text/javascript" src="assets/js/modernizr.custom.js"></script>
+  <script src="assets/js/libs/jquery.min.js"></script>
+	<script type="text/javascript" src="assets/js/libs/modernizr.custom.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.js"></script>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="assets/js/html5shiv.js"></script>
-      <script src="assets/js/respond.min.js"></script>
+      <script src="assets/js/libs/html5shiv.js"></script>
+      <script src="assets/js/libs/respond.min.js"></script>
     <![endif]-->
   </head>
 
@@ -373,10 +374,11 @@
     <!-- Placed at the end of the document so the pages load faster -->
 
 
-	<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="assets/js/retina.js"></script>
-	<script type="text/javascript" src="assets/js/jquery.easing.1.3.js"></script>
-    <script type="text/javascript" src="assets/js/smoothscroll.js"></script>
-	<script type="text/javascript" src="assets/js/jquery-func.js"></script>
+	<script type="text/javascript" src="assets/js/libs/bootstrap.min.js"></script>
+	<script type="text/javascript" src="assets/js/libs/retina.js"></script>
+	<script type="text/javascript" src="assets/js/libs/jquery.easing.1.3.js"></script>
+    <script type="text/javascript" src="assets/js/libs/smoothscroll.js"></script>
+	<script type="text/javascript" src="assets/js/libs/jquery-func.js"></script>
+  <script type="text/javascript" src="assets/js/ng/app.js"></script>
   </body>
 </html>
