Added alt tags to headshots so Adrian doesn't get mad

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="SHIELD - Free Bootstrap 3 Theme">
+    <meta name="description" content="Buffalo Open GIS is a system developed to help individuals and community organizations map their data enabling positive impacts on the city of Buffalo.">
     <meta name="author" content="Carlos Alvarez - Alvarez.is - blacktie.co">
     <link rel="shortcut icon" href="assets/ico/favicon.png">
 
@@ -100,7 +100,7 @@
 				<hr>
 
 				<div class="col-lg-6">
-					<p>Buffalo Open GIS is a system developed to help individuals and community organizations map their data to enable  positive impacts on the city of Buffalo. When we looked at the data sets provided by organizations for the <a href="http://attwny.hackupstate.com/" target="_blank">WNY Civic App Challenge</a> we saw a common need for groups.  The NGOs had spreadsheets full of addresses and latitudes/longitudes, but they didn't have a good way to create, update, and share, that data with other citizens. Building this tool gave us a chance to stretch our abilities and try out some new development tools.</p>
+					<p>Buffalo Open GIS is a system developed to help individuals and community organizations map their data enabling positive impacts on the city of Buffalo. When we looked at the data sets provided by organizations for the <a href="http://attwny.hackupstate.com/" target="_blank">WNY Civic App Challenge</a> we saw a common need for groups.  The NGOs had spreadsheets full of addresses and latitudes/longitudes, but they didn't have a good way to create, update, and share, that data with other citizens. Building this tool gave us a chance to stretch our abilities and try out some new development tools.</p>
 				</div><!-- col-lg-6 -->
 
 				<div class="col-lg-6">
@@ -251,16 +251,16 @@
 				<br>
 				<br>
 				<div class="col-lg-2 centered  col-lg-offset-1">
-					<img class="img img-circle" src="assets/img/team/team01.jpg" height="120px" width="120px" alt="">
+					<img class="img img-circle" src="assets/img/team/team01.jpg" alt="Clark Dever" height="120px" width="120px" alt="">
 					<br>
 					<h4><b>Clark Dever</b></h4>
 					<a href="http://www.twitter.com/clarkdever" class="icon icon-twitter"></a>
 					<a href="http://www.facebook.com/clarkdever" class="icon icon-facebook"></a>
-					<p>Hacker, Maker, Community Organizer, Above all else --<br />Buffalonian.</p>
+					<p>Hacker, Maker, Community Organizer, above all else --<br />Buffalonian.</p>
 				</div><!-- col-lg-2 -->
 
 				<div class="col-lg-2 centered">
-					<img class="img img-circle" src="assets/img/team/team02.jpg" height="120px" width="120px" alt="">
+					<img class="img img-circle" src="assets/img/team/team02.jpg" alt="Donald F. Lee III" height="120px" width="120px" alt="">
 					<br>
 					<h4><b>Don Lee</b></h4>
 					<a href="#" class="icon icon-twitter"></a>
@@ -269,7 +269,7 @@
 				</div><!-- col-lg-2 -->
 
 				<div class="col-lg-2 centered">
-					<img class="img img-circle" src="assets/img/team/team03.jpg" height="120px" width="120px" alt="">
+					<img class="img img-circle" src="assets/img/team/team03.jpg" alt="David Thiemecke" height="120px" width="120px" alt="">
 					<br>
 					<h4><b>David Thiemecke</b></h4>
 					<a href="#" class="icon icon-twitter"></a>
@@ -277,7 +277,7 @@
 					<p>Duo etiam splendide no. Quis facilis vel ea, saperet appetere vulputate at quo. Ex pro dictas ocurreret, no aeque dissentiet mea. </p>
 				</div><!-- col-lg-2 -->
 				<div class="col-lg-2 centered">
-					<img class="img img-circle" src="assets/img/team/team04.jpg" height="120px" width="120px" alt="">
+					<img class="img img-circle" src="assets/img/team/team04.jpg" alt="Charles Marra" height="120px" width="120px" alt="">
 					<br>
 					<h4><b>Charles Marra</b></h4>
 					<a href="#" class="icon icon-twitter"></a>
@@ -286,7 +286,7 @@
 				</div><!-- col-lg-2 -->
 
 				<div class="col-lg-2 centered">
-					<img class="img img-circle" src="assets/img/team/team05.jpg" height="120px" width="120px" alt="">
+					<img class="img img-circle" src="assets/img/team/team05.jpg" alt="Nick Gianadda" height="120px" width="120px" alt="">
 					<br>
 					<h4><b>Nick Gianadda</b></h4>
 					<a href="#" class="icon icon-twitter"></a>
