Changed background images to openstreetmap screenshots.  Changed header icon to blue color.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Buffalo Open GIS is a system developed to help individuals and community organizations map their data enabling positive impacts on the city of Buffalo.">
-    <meta name="author" content="Carlos Alvarez - Alvarez.is - blacktie.co">
+    <meta name="author" content="Clark Dever, Nick Gianadda - AlgonquinStudios.com">
     <link rel="shortcut icon" href="assets/ico/favicon.png">
 
     <title> Buffalo Open GIS</title>
@@ -42,9 +42,9 @@
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="glyphicon glyphicon-map-marker" style="font-size:30px; color:#3498db;"></span>
+            <span class="glyphicon glyphicon-map-marker blue" style="font-size:30px;"></span>
           </button>
-          <a class="navbar-brand hidden-xs hidden-sm" href="#home"><span class="glyphicon glyphicon-map-marker" style="font-size:18px; color:#3498db;"></span></a>
+          <a class="navbar-brand hidden-xs hidden-sm" href="#home"><span class="glyphicon glyphicon-map-marker blue" style="font-size:18px;"></span></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -62,11 +62,13 @@
 
 		<!-- ==== HEADERWRAP ==== -->
 	    <div id="headerwrap" id="home" name="home">
-			<header class="clearfix">
-                    <h1><span class="glyphicon glyphicon-map-marker"></span></h1>
-	  		 		<p>Buffalo Open GIS</p>
-	  		 		<p>Map, Share, Act.</p>
-	  		</header>
+  			<header class="clearfix">
+            <h1><span class="glyphicon glyphicon-map-marker blue"></span></h1>
+	 		       <p>
+                Buffalo Open GIS<br />
+                 Map, Share, Act.
+             </p>
+    		</header>
 	    </div><!-- /headerwrap -->
 
 		<!-- ==== GREYWRAP ==== -->
@@ -265,7 +267,7 @@
 					<h4><b>Don Lee</b></h4>
 					<a href="#" class="icon icon-twitter"></a>
 					<a href="#" class="icon icon-facebook"></a>
-					<p>Duo etiam splendide no. Quis facilis vel ea, saperet appetere vulputate at quo. Ex pro dictas ocurreret, no aeque dissentiet mea.  At summo tollit consulatu eam, nam at dicta assueverit, eius periculis ut nec.</p>
+					<p>: Family man, developer, consultant. Passionate about improving healthcare and making sense of data.</p>
 				</div><!-- col-lg-2 -->
 
 				<div class="col-lg-2 centered">
@@ -379,6 +381,6 @@
 	<script type="text/javascript" src="assets/js/libs/jquery.easing.1.3.js"></script>
     <script type="text/javascript" src="assets/js/libs/smoothscroll.js"></script>
 	<script type="text/javascript" src="assets/js/libs/jquery-func.js"></script>
-  <script type="text/javascript" src="assets/js/ng/app.js"></script>
+  <!-- script type="text/javascript" src="assets/js/app/scripts.js"></script -->
   </body>
 </html>
