--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
 
+    <!-- Leaflet CSS -->
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
     <!-- Custom styles for this template -->
     <link href="assets/css/main.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/icomoon.css">
@@ -386,6 +388,7 @@
   <script type="text/javascript" src="assets/js/libs/smoothscroll.js"></script>
 	<script type="text/javascript" src="assets/js/libs/jquery-func.js"></script>
 
+	<!--Angular Libraries -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.0/angular.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.0/angular-route.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.0/angular-sanitize.js"></script>
@@ -395,10 +398,13 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.0/angular-touch.js"></script>
 
 
-
+  <!-- JSON 3 Library-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/json3/3.3.2/json3.js"></script>
 
+  <!-- Leaflet Library-->
+  <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 
+  <!-- Firebase Libraries-->
   <script src="https://cdn.firebase.com/js/client/1.0.21/firebase.js"></script>
   <script src="https://cdn.firebase.com/libs/angularfire/0.8.2/angularfire.min.js"></script>
   <script src="https://cdn.firebase.com/js/simple-login/1.6.4/firebase-simple-login.js"></script>
