--- a/index.html
+++ b/index.html
@@ -271,25 +271,25 @@
 					<img class="img img-circle" src="assets/img/team/team02.jpg" alt="Donald F. Lee III" height="120px" width="120px" alt="">
 					<br>
 					<h4><b>Don Lee</b></h4>
-					<a href="#" class="icon icon-twitter"></a>
-					<a href="#" class="icon icon-facebook"></a>
-					<p>: Family man, developer, consultant. Passionate about improving healthcare and making sense of data.</p>
+					<a href="https://www.twitter.com/dflee30" class="icon icon-twitter"></a>
+					<a href="https://www.facebook.com/AlgonquinStudios" class="icon icon-facebook"></a>
+					<p>Family man, developer, consultant. Passionate about improving healthcare and making sense of data.</p>
 				</div><!-- col-lg-2 -->
 
 				<div class="col-lg-2 centered">
 					<img class="img img-circle" src="assets/img/team/team03.jpg" alt="David Thiemecke" height="120px" width="120px" alt="">
 					<br>
 					<h4><b>David Thiemecke</b></h4>
-					<a href="#" class="icon icon-twitter"></a>
-					<a href="#" class="icon icon-facebook"></a>
-					<p>Duo etiam splendide no. Quis facilis vel ea, saperet appetere vulputate at quo. Ex pro dictas ocurreret, no aeque dissentiet mea. </p>
+					<a href="https://twitter.com/DavidThiemecke" class="icon icon-twitter"></a>
+					<a href="https://www.facebook.com/AlgonquinStudios" class="icon icon-facebook"></a>
+					<p>If you’ll tell a good story, it’s worth doing. Co-Founder of startups transforming data and our community.</p>
 				</div><!-- col-lg-2 -->
 				<div class="col-lg-2 centered">
 					<img class="img img-circle" src="assets/img/team/team04.jpg" alt="Charles Marra" height="120px" width="120px" alt="">
 					<br>
 					<h4><b>Charles Marra</b></h4>
-					<a href="#" class="icon icon-twitter"></a>
-					<a href="#" class="icon icon-facebook"></a>
+					<a href="https://twitter.com/ASBuffalo" class="icon icon-twitter"></a>
+					<a href="https://www.facebook.com/AlgonquinStudios" class="icon icon-facebook"></a>
 					<p>Duo etiam splendide no. Quis facilis vel ea, saperet appetere vulputate at quo. Ex pro dictas ocurreret, no aeque dissentiet mea. Quo nisl malis et. .</p>
 				</div><!-- col-lg-2 -->
 
@@ -297,8 +297,8 @@
 					<img class="img img-circle" src="assets/img/team/team05.jpg" alt="Nick Gianadda" height="120px" width="120px" alt="">
 					<br>
 					<h4><b>Nick Gianadda</b></h4>
-					<a href="#" class="icon icon-twitter"></a>
-					<a href="#" class="icon icon-facebook"></a>
+					<a href="https://twitter.com/gianadda" class="icon icon-twitter"></a>
+					<a href="https://www.facebook.com/nicky.gianadda" class="icon icon-facebook"></a>
 					<p>Duo etiam splendide no. Quis facilis vel ea, saperet appetere vulputate at quo. Ex pro dictas ocurreret, no aeque dissentiet mea. Quo nisl malis et. .</p>
 				</div><!-- col-lg-2 -->
 			</div><!-- row -->
