Updated Images for theme, changed Nick's Bio, Changed link for Buffalo Soccer Club.

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 				</div><!-- col-lg-6 -->
 
 				<div class="col-lg-6">
-					<p>Algonquin Studios believes strongly in giving time and other resources to the Western New York community, especially the City of Buffalo and some of its underserved neighborhoods. If you enjoy this application and plan to use it, please consider supporting another program we operate: <a href="https://algonquinstudios.com/Engage/Community-Initiatives/BuffaloSoccerClub" target="_blank">Algonquin Sports for Kids: Buffalo Soccer Club</a>. A youth soccer program based on the concepts of healthy choices, personal responsibility, and respect for self and others.</p>
+					<p>Algonquin Studios believes strongly in giving time and other resources to the Western New York community, especially the City of Buffalo and some of its underserved neighborhoods. If you enjoy this application and plan to use it, please consider supporting another program we operate: <a href="http://buffalosoccerclub.org/" target="_blank">Algonquin Sports for Kids: Buffalo Soccer Club</a>. A youth soccer program based on the concepts of healthy choices, personal responsibility, and respect for self and others.</p>
 				</div><!-- col-lg-6 -->
 			</div><!-- row -->
 		</div><!-- container -->
@@ -122,7 +122,7 @@
 			<div class="container">
 				<h1>POPULAR MAPS</h1>
 				<hr>
-				<p>See what other folks in the community are mapping.</p>
+				<p style="color:#333; font-weight:500;">See what other folks in the community are mapping.</p>
 			</div><!-- container -->
 		</section><!-- section -->
 
@@ -299,7 +299,7 @@
 					<h4><b>Nick Gianadda</b></h4>
 					<a href="https://twitter.com/gianadda" class="icon icon-twitter"></a>
 					<a href="https://www.facebook.com/nicky.gianadda" class="icon icon-facebook"></a>
-					<p>Duo etiam splendide no. Quis facilis vel ea, saperet appetere vulputate at quo. Ex pro dictas ocurreret, no aeque dissentiet mea. Quo nisl malis et. .</p>
+					<p>Builder, Big Data and Data Visualization Specialist, I love creating intelligent systems to automate &amp; improve decision making.</p>
 				</div><!-- col-lg-2 -->
 			</div><!-- row -->
 		</div><!-- container -->
