--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
-
+    <!-- JQuery HandsOnTable CSS -->
+    <link href='https://cdnjs.cloudflare.com/ajax/libs/jquery-handsontable/0.10.2/jquery.handsontable.full.min.css' rel='stylesheet' />
+    <!-- Mapbox CSS -->
+    <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.css' rel='stylesheet' />
     <!-- Leaflet CSS -->
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
     <!-- Custom styles for this template -->
@@ -387,6 +390,8 @@
 	<script type="text/javascript" src="assets/js/libs/jquery.easing.1.3.js"></script>
   <script type="text/javascript" src="assets/js/libs/smoothscroll.js"></script>
 	<script type="text/javascript" src="assets/js/libs/jquery-func.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-handsontable/0.10.2/jquery.handsontable.full.min.js"></script>
+
 
 	<!--Angular Libraries -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.0/angular.js"></script>
@@ -398,11 +403,15 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.0/angular-touch.js"></script>
 
 
+
   <!-- JSON 3 Library-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/json3/3.3.2/json3.js"></script>
 
   <!-- Leaflet Library-->
   <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+
+  <!-- Mapbox -->
+  <script src="https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.js"></script>
 
   <!-- Firebase Libraries-->
   <script src="https://cdn.firebase.com/js/client/1.0.21/firebase.js"></script>
@@ -425,13 +434,14 @@
       <script src="assets/js/ng/controllers/account.js"></script>
       <script src="assets/js/ng/directives/ngShowAuth.js"></script>
       <script src="assets/js/ng/directives/ngHideAuth.js"></script>
+
       <script src="assets/js/ng/routes.js"></script>
       <!-- endbuild -->
 
   <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    (function(a,s,t,u,d,i,o){a['GoogleAnalyticsObject']=d;a[d]=a[d]||function(){
+    (a[d].q=a[d].q||[]).push(arguments)},a[d].l=1*new Date();i=s.createElement(t),
+    o=s.getElementsByTagName(t)[0];i.async=1;i.src=u;o.parentNode.insertBefore(i,o)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-7892607-7', 'auto');
