adding <script tag for map controller

--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
       <script src="assets/js/ng/angularfire/simpleLogin.js"></script>
       <script src="assets/js/ng/controllers/login.js"></script>
       <script src="assets/js/ng/controllers/account.js"></script>
+      <script src="assets/js/ng/controllers/map.js"></script>
       <script src="assets/js/ng/directives/ngShowAuth.js"></script>
       <script src="assets/js/ng/directives/ngHideAuth.js"></script>
 
