Fixed ugliness on account page.  Fixed links in header so they work with router.

--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
           </div>
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li><a href="#home" class="smoothScroll">Home</a></li>
-  			<li> <a href="#about" class="smoothScroll"> About</a></li>
-  			<li> <a href="#maps" class="smoothScroll"> Maps</a></li>
-  			<li> <a href="#team" class="smoothScroll"> Team</a></li>
-  			<li> <a href="#contact" class="smoothScroll"> Contact</a></li>
-        <li> <a ng-hide-auth="" href="#/login" class="smoothScroll">Log in</a></li>
-        <li> <a ng-show-auth="" href="#/account" class="smoothScroll">Account</a></li>
+              <li><a href="/#home" class="smoothScroll">Home</a></li>
+        			<li> <a href="/#about" class="smoothScroll"> About</a></li>
+        			<li> <a href="/#maps" class="smoothScroll"> Maps</a></li>
+        			<li> <a href="/#team" class="smoothScroll"> Team</a></li>
+        			<li> <a href="#contact" class="smoothScroll"> Contact</a></li>
+              <li> <a ng-hide-auth="" href="#/login" class="smoothScroll">Log in</a></li>
+              <li> <a ng-show-auth="" href="#/account" class="smoothScroll">Account</a>
           </div><!--/.nav-collapse -->
         </div>
       </div>
