Added Maps list to account screen with edit finction

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         			<li> <a href="/#about" class="smoothScroll"> About</a></li>
         			<li> <a ng-show-auth="" class="dropdown-toggle ng-cloak" data-toggle="dropdown"> Maps<span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
-                          <li><a href="#/map/0">Create Map</a></li>
-                          <li><a href="#/profile">Your Maps</a></li>
+                          <li><a href="#/edit/0">Create Map</a></li>
+                          <li><a href="#/account">Your Maps</a></li>
                           <li><a href="#maps">Most Popular</a></li>
                           <li><a href="#/allmaps">All</a></li>
                         </ul>
