--- a/embed.html
+++ b/embed.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Buffalo Open GIS is a system developed to help individuals and community organizations map their data enabling positive impacts on the city of Buffalo.">
-    <meta name="author" content="Clark Dever, Nick Gianadda - AlgonquinStudios.com">
+    <meta name="author" content="VCAMP.co">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="shortcut icon" href="assets/ico/favicon.png">
@@ -12,7 +12,7 @@
     <title> Buffalo Open GIS</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/css/bootstrap.css" rel="stylesheet">
     <!-- JQuery HandsOnTable CSS -->
     <link href='https://cdnjs.cloudflare.com/ajax/libs/jquery-handsontable/0.10.2/jquery.handsontable.full.min.css' rel='stylesheet' />
     <!-- Mapbox CSS -->
@@ -42,109 +42,15 @@
 
   <body data-spy="scroll" data-offset="0" data-target="#navbar-main" ng-app="bogisApp">
 
-
-  	<div id="navbar-main">
-      <!-- Fixed navbar -->
-      <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-              <span class="glyphicon glyphicon-map-marker blue" style="font-size:30px;"></span>
-            </button>
-            <a class="navbar-brand hidden-xs hidden-sm" href="#home"><span class="glyphicon glyphicon-map-marker blue" style="font-size:18px;"></span></a>
-          </div>
-          <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-              <li><a href="/#home" class="smoothScroll">Home</a></li>
-        			<li> <a href="/#about" class="smoothScroll"> About</a></li>
-        			<li> <a href="/#maps" class="smoothScroll"> Maps</a></li>
-        			<li> <a href="/#team" class="smoothScroll"> Team</a></li>
-        			<li> <a href="#contact" class="smoothScroll"> Contact</a></li>
-              <li class="ng-cloak"> <a ng-hide-auth="" href="#/login" class="smoothScroll">Log in</a></li>
-              <li class="dropdown ng-cloak">
-                <a ng-show-auth="" class="dropdown-toggle ng-cloak" data-toggle="dropdown">Account <span class="caret"></span></a>
-                <ul class="dropdown-menu" role="menu">
-                  <li><a href="#/account">Settings</a></li>
-                  <li class="divider"></li>
-                  <li><a href="" ng-click="logout();">Log Out</a></li><!--TODO: Make this work -->
-                </ul>
-              </li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
-
     <!-- Router -->
     <div class="ng-view"></div>
-
-    <!-- Footer -->
-		<div class="container" id="contact" name="contact">
-			<div class="row">
-			<br>
-				<h1 class="centered">THANKS FOR VISITING US</h1>
-				<hr>
-				<br>
-				<br>
-				<div class="col-lg-4">
-					<h3>Contact Information</h3>
-					<p><span class="icon icon-home"></span> <a href="https://www.algonquinstudios.com">Algonquin Studios</a><br/>
-						<span class="icon icon-phone"></span> 716-842-1439 <br/>
-						<span class="icon icon-envelop"></span> <a href="mailto:info@algonquinstudios.com">info@algonquinstudios.com</a> <br/>
-						<span class="icon icon-twitter"></span> <a href="https://twitter.com/ASBuffalo">@ASBuffalo</a> <br/>
-						<span class="icon icon-facebook"></span> <a href="https://www.facebook.com/AlgonquinStudios/">Like Us</a> <br/>
-					</p>
-				</div><!-- col -->
-
-				<div class="col-lg-4">
-					<h3>Register</h3>
-					<p>Register for an account here and start making your own maps</p>
-					<p>
-						<form class="form-horizontal" role="form">
-						  <div class="form-group">
-						    <label for="inputEmail1" class="col-lg-4 control-label"></label>
-						    <div class="col-lg-10">
-						      <input type="email" class="form-control" id="inputEmail1" placeholder="Email">
-						    </div>
-						  </div>
-						  <div class="form-group">
-						    <label for="text1" class="col-lg-4 control-label"></label>
-						    <div class="col-lg-10">
-						      <input type="text" class="form-control" id="text1" placeholder="Your Name">
-						    </div>
-						  </div>
-						  <div class="form-group">
-						    <div class="col-lg-10">
-						      <button type="submit" class="btn btn-success">Create Account</button>
-						    </div>
-						  </div>
-					   </form><!-- form -->
-					</p>
-				</div><!-- col -->
-
-				<div class="col-lg-4">
-					<h3>Help Us</h3>
-					<p>Together we can make Buffalo an even better city.  Share this app with the people who need access to your maps  or a way to create their own.</p>
-				</div><!-- col -->
-
-			</div><!-- row -->
-
-		</div><!-- container -->
-
-		<div id="footerwrap">
-			<div class="container">
-        <div class="pull-left">
-				<a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a> <span xmlns:dct="https://purl.org/dc/terms/" property="dct:title">Buffalo Open GIS</span> by <a xmlns:cc="https://creativecommons.org/ns#" href="https://www.algonquinstudios.com" property="cc:attributionName" rel="cc:attributionURL">Algonquin Studios</a> is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
-        </div>
-			</div>
-		</div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
 
   <script src="https://code.jquery.com/jquery-2.1.1.js"></script>
-	<script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="assets/js/libs/bootstrap.min.js"></script>
 	<script type="text/javascript" src="assets/js/libs/retina.js"></script>
 	<script type="text/javascript" src="assets/js/libs/jquery.easing.1.3.js"></script>
   <script type="text/javascript" src="assets/js/libs/smoothscroll.js"></script>
@@ -197,8 +103,17 @@
       <script src="assets/js/ng/directives/ngShowAuth.js"></script>
       <script src="assets/js/ng/directives/ngHideAuth.js"></script>
 
-      <script src="assets/js/ng/routes.js"></script>
+      <script src="assets/js/ng/embedRouter.js"></script>
       <!-- endbuild -->
+
+  <div id="fb-root"></div>
+  <script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=1495779517351463&version=v2.0";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));</script>
 
   <script>
     (function(a,s,t,u,d,i,o){a['GoogleAnalyticsObject']=d;a[d]=a[d]||function(){
