--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
       <script src="assets/js/ng/controllers/edit.js"></script>
       <script src="assets/js/ng/controllers/allmaps.js"></script>
       <script src="assets/js/ng/controllers/profile.js"></script>
+      <script src="assets/js/ng/factories/urlGenerator.js"></script>
       <script src="assets/js/ng/directives/ngShowAuth.js"></script>
       <script src="assets/js/ng/directives/ngHideAuth.js"></script>
 
