--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         			<li> <a href="/#about" class="smoothScroll"> About</a></li>
         			<li> <a ng-show-auth="" class="dropdown-toggle ng-cloak" data-toggle="dropdown"> Maps<span class="caret"></span></a>
                         <ul class="dropdown-menu" ng-controller="UrlGenerator" role="menu">
-                          <li><a ng-click="getURL()" href="#/edit/">Create Map</a></li>
+                          <li><a ng-click="getURL()">Create Map</a></li>
                           <li><a href="#/account">Your Maps</a></li>
                           <li><a href="#maps">Most Popular</a></li>
                           <li><a href="#/allmaps">All</a></li>
